
  [ Mario Limonciello ]
  * Drop all references to mythappearance.

  [ Colin Watson ]
  * Split iso_3166.tab lines by tabs, fixing an infinite loop on countries
    whose names contain more than one word (LP: #193329).
  * Drop all privileges and set HOME before launching a browser to read
    release notes (LP: #194727).
  * Explicitly depend on ntfsprogs for NTFS resizing.

  [ Evan Dandrea ]
  * partman/confirm_new_label is now partman-
    partitioning/confirm_new_label (LP: #190036).

 -- Evan Dandrea <evand@ubuntu.com>  Tue, 26 Feb 2008 13:29:36 -0500

ubiquity (1.7.12) hardy; urgency=low

  [ Colin Watson ]
  * Slight shell efficiency improvement in
    partman/check.d/03partition_too_small.
  * Use 'autoreconf -fi' so that Autotools files reliably get upgraded.
  * Upgrade to gettext 0.17.

  [ Evan Dandrea ]
  * Update partman_popup with respect to other recent changes
    (LP: #194688).  Thanks Colin Watson.
  * Regain root when moving /etc/default/console-setup out of the way
    (LP: #188492).  Thanks Colin Watson.
  * Minor changes to ubiquity-dm from suggestions by Colin Watson.
  * Remove suffix from icon path in .desktop file (LP: #188221).

  [ Jonathan Riddell ]
  * Fix QApplication args in ubiquity/frontend/kde_ui.py 

 -- Jonathan Riddell <jriddell@ubuntu.com>  Mon, 25 Feb 2008 10:13:27 -0500

ubiquity (1.7.11) hardy; urgency=low

  [ Jonathan Riddell ]
  * Add web proxy field to qt frontend.  
    Patch by Richard A. Johnson <nixternal@kubuntu.org>
  * Force kde_ui style to plastique, works around QtDbus/pydbus
    clash when using oxygen style

  [ Mario Limonciello ]
  * Drop fullscreen workaround in Mythbuntu interface.
  * Adjust user permissions before/after launching MythTV setup.
  * If mythbuntu frontend is present, use that.  This allows
    only-ubiquity to launch directly into this frontend.
  * Check for jockey-gtk instead of restricted-manager on a PS3 install.

  [ Evan Dandrea ]